[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.13.0"
strum_macros = "0.13.0"
thiserror = "1.0.38"
uuid = {version = "1.3.0", features = ["v4"]}
lazy_static = "*"